# ArbiLens

./: .gitignore  Makefile  README.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260324_0001_create_documents.py
backend/app/: __init__.py  main.py
backend/app/api/dependencies/: auth.py  billing.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  errors.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  analysis_job.py  clause.py  document.py  document_chunk.py  document_version.py  enums.py  extracted_text.py  mixins.py  organization.py  report.py  risk.py  user.py
backend/app/schemas/: ai.py  auth.py  billing.py  clauses.py  comparisons.py  documents.py  errors.py  health.py  references.py  reports.py  risks.py  summary.py  users.py
backend/app/services/: ai.py  auth.py  billing.py  comparisons.py  documents.py  extraction.py  health.py  jobs.py  reports.py  scoring.py  storage.py  summaries.py  users.py
backend/app/services/normalization/: __init__.py  service.py
backend/app/services/parsing/: base.py  docx_parser.py  pdf_parser.py  service.py
backend/app/tasks/: celery_app.py  document_tasks.py
backend/app/tests/: conftest.py  test_ai.py  test_api_contracts.py  test_auth.py  test_comparisons.py  test_extraction.py  test_health.py  test_normalization.py  test_parsing.py  test_pipeline.py  test_reports.py  test_scoring.py  test_summary.py  test_uploads.py
backend/app/workers/: __init__.py
docs/: architecture.md  (+5 more)
(+52 files in other folders)
